--- a/src/Pim/Bundle/CatalogBundle/Resources/views/Product/index.html.twig
+++ b/src/Pim/Bundle/CatalogBundle/Resources/views/Product/index.html.twig
@@ -113,7 +113,28 @@
 
     <div class="row-fluid has-sidebar">
         <div id="tree" data-datalocale="{{ dataLocale }}" data-node-id="{{ app.request.get("categoryId") }}" data-tree-id="{{ app.request.get("treeId") }}" data-include-sub="{{ app.request.get("includeSub") }}"></div>
-        <div id="product-grid"></div>
+        <div id="product-grid">
+        {# FIXME_MONGO Temporary grid to access products #}
+            <table class="table table-bordered groups">
+                <thead>
+                    <tr>
+                        <th>System id</th>
+                        <th>SKU</th>
+                        <th>Family</th>
+                        <th>Name</th>
+                </thead>
+                <tbody>
+                    {% for product in products %}
+                        <tr>
+                            <td><a href="{{ path('pim_catalog_product_edit', { 'id': product.id }) }}" >{{ product.id }}</a></td>
+                            <td>{{ product.sku }}</td>
+                            <td>{{ product.family }}</td>
+                            <td>{{ product.name }}</td>
+                        </tr>
+                    {% endfor%}
+                </tbody>
+            </table>
+        </div>
     </div>
 
 {% endblock %}
