PIM-1597 Display a dummy grid for products in ODM

--- a/src/Pim/Bundle/CatalogBundle/Resources/views/Product/index.html.twig
+++ b/src/Pim/Bundle/CatalogBundle/Resources/views/Product/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block head_script %}
     {{ parent() }}
+    {# FIXME_MONGO : Datagrid... #}
+    {#
     {% embed 'PimGridBundle:Include:javascript.html.twig' with {'datagridView': datagrid, 'selector': '#product-grid'} %}
         {% block javascript_grid_type "pim/datagrid/grid" %}
         {% block javascript_grid_options %}
@@ -27,6 +29,7 @@
         {% endblock %}
     {% endembed %}
     {% include 'OroGridBundle:Include:stylesheet.html.twig' %}
+    #}
     <script type="text/javascript">
         require(
             ['jquery', 'oro/mediator', 'pim/tree/view', 'jquery.sidebarize'],
@@ -62,7 +65,8 @@
 {% block content %}
 
     {% set buttons %}
-        {% if resource_granted('pim_catalog_product_create') %}
+        {# FIXME_MONGO: ACL disabled #}
+        {#% if resource_granted('pim_catalog_product_create') %#}
             {{ elements.createBtn(
                 'product',
                 null,
@@ -79,7 +83,7 @@
                     }
                 );
             </script>
-        {% endif %}
+        {#% endif %#}
     {% endset %}
 
     {% set subtitle %}
