--- a/src/Pim/Bundle/CatalogBundle/Resources/views/ProductAttribute/form.html.twig
+++ b/src/Pim/Bundle/CatalogBundle/Resources/views/ProductAttribute/form.html.twig
@@ -44,11 +44,11 @@
             {{ elements.form_errors(form) }}
 
             <div class="tab-pane active" id="parameters">
-                {% include 'PimCatalogBundle:ProductAttributeInterface:_form_parameters.html.twig' with {'form': form} %}
+                {% include 'PimCatalogBundle:ProductAttribute:_form_parameters.html.twig' with {'form': form} %}
             </div>
 
             <div class="tab-pane" id="values">
-                {% include 'PimCatalogBundle:ProductAttributeInterface:_form_values.html.twig' with {'form': form} %}
+                {% include 'PimCatalogBundle:ProductAttribute:_form_values.html.twig' with {'form': form} %}
             </div>
 
             {% if form.vars.value.id %}
@@ -64,7 +64,7 @@
 
 {% block head_script_component %}
     {{ parent() }}
-    {% include 'PimCatalogBundle:ProductAttributeInterface:_js-handler.html.twig' with measures %}
+    {% include 'PimCatalogBundle:ProductAttribute:_js-handler.html.twig' with measures %}
     {% if form.vars.value.id %}
         {% include 'OroGridBundle:Include:javascript.html.twig' with {'datagridView': historyDatagrid, 'selector': '#history-grid'} %}
     {% endif %}
